# ai-society-sim

./: LICENSE  README.md  README_zh.md  pyproject.toml
configs/: default.yaml
src/ai_society_sim/: agents.py  cli.py  config.py  forum.py  llm.py  simulation.py  viz.py  world.py
